// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tab renders active styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item is-active fpsgVm"
/>
`;

exports[`Tab renders default styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item fpsgVm"
/>
`;

exports[`Tab renders disabled styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item is-disabled fpsgVm"
  disabled={true}
/>
`;

exports[`Tab renders focused styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item is-focused fpsgVm"
/>
`;

exports[`Tab renders hovered styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item is-hovered fpsgVm"
/>
`;

exports[`Tab renders selected styling 1`] = `
<div
  className="Tab-gVjHxL c-tab__list__item is-selected fpsgVm"
  selected={true}
/>
`;
